fix: prevent z-index from overlapping header #7

--- a/src/style-flight-segment.scss
+++ b/src/style-flight-segment.scss
@@ -7,6 +7,8 @@
 :host {
   flex-grow: 1;
   flex-basis: 0;
+  // prevent z-index declarations from affecting anything outside the component
+  isolation: isolate;
 }
 
 // places the connecting line with a pseudo class
